improve action simulation algo